--- a/contact-form.css
+++ b/contact-form.css
@@ -16,10 +16,10 @@
 
 .Form-title {
     color: var(--niceblue);
-    font-size: 50pt !important;
-    left: 50%;
+    font-size: 3vw !important;
     position: relative;
 }
+
 
 
 #contact-form-main {
@@ -28,7 +28,6 @@
 
 .contact-form-body {
     margin: 0;
-    margin-top: 30px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -38,6 +37,9 @@
     padding-bottom: 10px;
     border-radius: 1.5rem;
     max-width: 50%;
+    left: 50%;
+    transform: translate(-50%, 0); 
+    position: relative;
 }
 
 .fcf-form-group {
@@ -46,7 +48,6 @@
 
 .fcf-input-group {
     position: relative;
-    left: 50%;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
@@ -85,32 +86,11 @@ textarea.fcf-form-control {
     height: auto;
 }
 
-label.fcf-label {
-    display: inline-block;
-    margin-bottom: 0.5rem;
-}
-
-.fcf-credit {
-    padding-top: 10px;
-    font-size: 0.9rem;
-    color: #545b62;
-}
-
-.fcf-credit a {
-    color: #545b62;
-    text-decoration: underline;
-}
-
-.fcf-credit a:hover {
-    color: var(--niceblue);
-    text-decoration: underline;
-}
 
 .fcf-btn {
     display: inline-block;
     position: relative;
-    left: 83%;
-    margin-top: 30px;
+    margin-top: 5%;
     align-self: center;
     font-weight: 400;
     text-align: center;
@@ -122,11 +102,19 @@ label.fcf-label {
     user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 0.375rem 3.75rem;
+    padding: 0.375rem 5vw;
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 5rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@media screen and (max-width: 1000px) {
+    .Form-title {
+        font-size: 7vw !important;
+    }
 }
 
 @media (prefers-reduced-motion: reduce) {
