--- a/style.css
+++ b/style.css
@@ -265,6 +265,20 @@ html {
     position: absolute;
 }
 
+@media screen and (min-width: 1921px) {
+    .neustadtpic {
+        height: 140vh;
+    }
+    .btn {
+        font-size: 1.5vw;
+        padding: 1vw 3vw;
+        margin-top: 3%;
+    }
+    .titelheader {
+        top: 4vh;
+    }
+}
+
 #pages_section {
     position: absolute;
     min-width: fit-content;
