--- a/footer_style.css
+++ b/footer_style.css
@@ -1,38 +1,102 @@
-/* footer */
-
-.footer_links {
-    position: relative;
-    top: 100px;
-    z-index: 10;
-    padding: 0 10px;
-    margin-right: 20px;
-    float: right;
+:root {
+    --darkpurple: #444053;
+    --darkpurpletrans: #444053a8;
+    --niceblue: #6C63FF;
+    --notwhite: #E6E6E6;
+    --lightblue: #F0EFFF;
+    --whitestwhite: #ffffff;
+    --maybepink: #F0EFFF;
+    --colorfulgray: #67647E;
+    --kindofred: #CC818C;
+    --darkerred: #A0616A; 
+    --nicePink: #FDC2CC;
+    scrollbar-color: rgb(0, 0, 0) rgb(0, 0, 0)  !important;
 }
 
-/* text properties */
-.links {
-    color: var(--lightblue);
+.footer > * {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     text-decoration: none;
+}
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 2.5vh 0;
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    background-color: var(--darkpurple);
+    overflow: hidden;
+}
+
+.inner_footer {
+    display: inherit;
+    margin: 0 auto;
+    width: 70vw;
+    height: 100%;
+}
+
+.inner_footer .logo_container {
+    width: 35%;
+    float: left;
+    height: 100%;
+    display: inherit;
+}
+
+.inner_footer .footer_third {
+    width: calc(21.67% - 20px);
+    margin-right: 10px;
+    float: left;
+    height: 100%;
+
+}
+
+.inner_footer .footer_third:last-child {
+    margin-right: 0;
+}
+
+.inner_footer .footer_third h1 {
+    font-size: 1vw;
     font-family: rockwell-nova,sans-serif;
-    font-style: light;
     font-weight: 400;
-    font-size: 20px;
-    transition: 0.5s;
+    color: white;
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
 }
-.links:hover {
+a {
+    font-size: 0.8vw;
+    font-family: rockwell-nova,sans-serif;
+    font-weight: 200;
+    color: var(--lightblue);
+    display: block;
+    width: 100%;
+    padding-bottom: 5px;
+    text-decoration: none; 
+}
+a:hover {
     color: var(--nicePink);
-    text-shadow: 0px 0px 20px var(--nicePink);
+}
+.inner_footer .footer_third li {
+    display: inline block;
+    padding: 0 5px;
+    font-size: 20px;
 }
 
-footer {
-    position: relative;
-    bottom: -170rem;
-    margin-top: 5px;
+.footer_third .fab {
+    color: var(--kindofred);
 }
 
-.footer_box_svg {
-    transform: scale(1,1.1);
-    -moz-transform: scale(1,1.1);
-    -webkit--transform: scale(1,1.1);
-    -ms-transform: scale(1,1.1);
+@media screen and (max-width: 900px) {
+    .footer .inner_footer {
+        width: 90%;
+    }
+    .inner footer .logo-container, .inner_footer .footer_third {
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
