--- a/footer_style.css
+++ b/footer_style.css
@@ -21,7 +21,7 @@
 }
 
 .footer {
-    position: absolute;
+    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -60,43 +60,81 @@
 }
 
 .inner_footer .footer_third h1 {
-    font-size: 1vw;
+    font-size: 1.5vw;
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
-    color: white;
+    color: var(--notwhite);
     display: block;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 a {
-    font-size: 0.8vw;
+    font-size: 1vw;
     font-family: rockwell-nova,sans-serif;
     font-weight: 200;
-    color: var(--lightblue);
+    color: var(--kindofred);
     display: block;
     width: 100%;
     padding-bottom: 5px;
     text-decoration: none; 
+    transition: 250ms ease all;
 }
-a:hover {
+a:hover, .footer_third .fab:hover {
     color: var(--nicePink);
+    transition: 250ms ease color;
 }
 .inner_footer .footer_third li {
     display: inline block;
     padding: 0 5px;
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 
 .footer_third .fab {
     color: var(--kindofred);
+    transition: 250ms ease all;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1200px) {
+    .logo_container {
+        left: 50%;
+        transform: translateX(-50%);
+        position: relative;
+    }
+    .inner_footer {
+        text-align: center;
+    }
     .footer .inner_footer {
         width: 90%;
     }
-    .inner footer .logo-container, .inner_footer .footer_third {
+    .inner footer .logo_container, .inner_footer .footer_third {
         width: 100%;
         margin-bottom: 30px;
+    }
+    a {
+        font-size: 2vw;
+    }
+    .inner_footer .footer_third h1 {
+        font-size: 2vw;
+    }
+    .inner_footer .footer_third li {
+        font-size: 3vw;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .inner_footer {
+        text-align: center;
+    }
+
+    a, .inner_footer .footer_third h1 {
+        font-size: 4vw;
+    }
+     {
+        font-size: 4vw;
+    }
+    .inner_footer .footer_third li {
+        font-size: 7vw;
+        display: block;
     }
 }
