--- a/style.css
+++ b/style.css
@@ -167,12 +167,12 @@ html {
 
 html {
     margin: 0px;
-    min-height: 200vh;
+    min-height: 100vh;
+
  }
  
  body {
     margin: 0px;
-    min-height: 200vh;
  }
 
 
@@ -293,6 +293,7 @@ html {
 
 #pages_section {
     position: absolute;
+    overflow: hidden;
     width: 100%;
     left: 0;
     box-sizing: border-box;
@@ -313,7 +314,7 @@ html {
 }
 
 #page4 {
-    margin-bottom: 5rem;
+    margin-bottom: 10vw;
 }
 @media screen and (max-width: 1200px) {
     .titelheader {
@@ -350,7 +351,7 @@ html {
         top: 50%;
     }
     #page2 {
-        top: -13vh;
+        top: 0vh;
     }
     #pages_section {
         top: 65%;
@@ -365,7 +366,9 @@ html {
         padding-bottom: 3vw;
     }
 }
-
+.mouse_pointer {
+    cursor: pointer;
+}
 
 /* allgemein */
 .Topic_header {
@@ -461,7 +464,7 @@ html {
     height: auto;
 }
 
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 1000px) {
     .icon, .page2_icon, .scroll_arrow_home_2, .scroll_arrow_home_3 {
         display: none;
     }
