--- a/footer_style.css
+++ b/footer_style.css
@@ -76,12 +76,13 @@ a {
     display: block;
     width: 100%;
     padding-bottom: 5px;
+    text-shadow: 0 0 0;
     text-decoration: none; 
-    transition: 1500ms ease all;
+    transition: color 1500ms ease, text-shadow 1500ms ease;
 }
 a:hover, .footer_third .fab:hover {
     color: var(--maybepink);
-    transition: 250ms ease all;
+    transition: color 1500ms ease, text-shadow 1500ms ease;
     text-shadow: 0 0 5px var(--nicePink);
 }
 .inner_footer .footer_third li {
@@ -98,7 +99,7 @@ a:hover, .footer_third .fab:hover {
 
 .version_info {
     color: #ffffff5e !important;
-    font-size: 1vw;
+    font-size: 0.5rem;
     display: block;
     padding-bottom: 5px;
     width: 100%;
