improved contrast and added lang attribute

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --darkpurple: #444053;
+    --mediumpurple: #4e4a5f;
+    --lighterpurple: #5c5770;
     --darkpurpletrans: #444053a8;
     --niceblue: #6C63FF;
     --notwhite: #E6E6E6;
