--- a/contact-form.css
+++ b/contact-form.css
@@ -46,6 +46,20 @@
     margin-bottom: 1rem;
 }
 
+.fcf-form-group p {
+    color: var(--darkpurple);
+    font-weight: 200;
+    font-size: small;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 1s, transform 1s;
+    position: relative;
+    top: 1vh;
+    text-align: center;
+    display: inline-flex;
+}
+
 .fcf-input-group {
     position: relative;
     display: -ms-flexbox;
@@ -88,13 +102,15 @@ textarea.fcf-form-control {
 
 
 .fcf-btn {
-    display: inline-block;
     position: relative;
     margin-top: 5%;
     align-self: center;
-    font-weight: 400;
     text-align: center;
     vertical-align: middle;
+    left: 50%;
+    transform: translateX(-50%);
+    display: inline-block;
+    font-weight: 400;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -107,8 +123,6 @@ textarea.fcf-form-control {
     line-height: 1.5;
     border-radius: 5rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 @media screen and (max-width: 1000px) {
